--- a/README.Rmd
+++ b/README.Rmd
@@ -35,9 +35,25 @@ devtools::install_github("simonpcouch/rinfa")
 ## Example
 
 ```{r}
+x <- matrix(rnorm(3e6), ncol = 3)
+y <- rnorm(1e6)
+
+dat <- cbind(as.data.frame(x), y)
+
+system.time(
+  lm(y ~ ., dat)
+)
+
+system.time(
+  # lm()'s speedy friend
+  lm.fit(x, y)
+)
+
 library(rinfa)
 
-mod <- fit_linear_reg_linfa(x = rnorm(200), y = rnorm(100), n_features = 2)
+x_rinfa <- c(x)
 
-predict_linear_reg_linfa(mod, x = rnorm(20), n_features = 2)
+system.time({
+  fit_linear_reg_linfa(x_rinfa, y, n_features = 3)
+})
 ```
