update README with new timings
the overhead of `c()` on inputted matrix bumps the linfa fit time up quite a bit

--- a/README.Rmd
+++ b/README.Rmd
@@ -51,9 +51,7 @@ system.time(
 
 library(rinfa)
 
-x_rinfa <- c(x)
-
 system.time({
-  fit_linear_reg_linfa(x_rinfa, y, n_features = 3)
+  linfa_linear_reg(x, y)
 })
 ```
