--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,7 @@ parsnip_models <- get_from_env("models") %>%
 ```
 
 ```{r}
-x <- matrix(rnorm(3e7), ncol = 3)
+x <- matrix(rnorm(3e7), ncol = 3, dimnames = list(NULL, paste0("X", 1:3)))
 y <- rnorm(1e7)
 
 dat <- cbind(as.data.frame(x), y)
@@ -66,6 +66,16 @@ library(rinfa)
 system.time({
   .linfa_linear_reg(x, y)
 })
+```
+
+To use rinfa with tidymodels, set the modeling engine to `"linfa"`:
+
+```{r}
+# using the formula interface:
+linfa_fit <- fit(linear_reg(engine = "linfa"), y ~ ., dat)
+
+# using the (more performant, in this case) XY interface:
+linfa_fit_xy <- fit_xy(linear_reg(engine = "linfa"), x = x, y = y)
 ```
 
 ## Available implementations
