input matrix directly to rust
previous interface had required a reshape and transpose, but turns out extendr can take matrices (as read-only) directly. cuts down on fit time quite a bit.

just specs out the approach for fitting a linear regression, but can apply to other implementations now.

--- a/README.Rmd
+++ b/README.Rmd
@@ -52,15 +52,17 @@ y <- rnorm(1e7)
 
 dat <- cbind(as.data.frame(x), y)
 
+# the usual formula interface
 system.time(
   lm(y ~ ., dat)
 )
 
 system.time(
-  # lm()'s speedy friend, from base R
+  # lm()'s speedy friend (still from base R)
   .lm.fit(x, y)
 )
 
+# rinfa's implementation
 library(rinfa)
 
 system.time({
